; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_log2lines.c_process_file.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_log2lines.c_process_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"An error occured loading '%s'\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i8*)* @process_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process_file(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  store i32 1, i32* %9, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i8* @load_file(i8* %10, i64* %8)
  store i8* %11, i8** %7, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @l2l_dbg(i32 0, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %15)
  br label %24

17:                                               ; preds = %3
  %18 = load i8*, i8** %7, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @process_data(i8* %18, i64 %19, i8* %20)
  store i32 %21, i32* %9, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @free(i8* %22)
  br label %24

24:                                               ; preds = %17, %14
  %25 = load i32, i32* %9, align 4
  ret i32 %25
}

declare dso_local i8* @load_file(i8*, i64*) #1

declare dso_local i32 @l2l_dbg(i32, i8*, i8*) #1

declare dso_local i32 @process_data(i8*, i64, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
